Refactor image handling and update test cases in OpenAI client
The code was refactored to remove image handling from OpenAIInterface and OpenAIService to DallEservice. Changes have been done to methods to improve the handling of image requests and responses. All relevant test cases were updated to reflect these changes. Updates were also made to properties file for an image's default size and to the image request class reflecting new parameters.