@@ -1,7 +1,6 @@
 package com.kousenit.openaiclient.services;
 
 import com.kousenit.openaiclient.json.*;
-import com.kousenit.openaiclient.util.FileUtils;
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -37,7 +36,7 @@ class OpenAIInterfaceTest {
                 openAIInterface.createChatRequest("Say this is a test!");
         ChatResponse response = openAIInterface.getChatResponse(chatRequest);
         logger.info(response.usage().toString());
-        assertThat(response.choices().get(0).message().content())
+        assertThat(response.choices().getFirst().message().content())
                 .isEqualTo("This is a test!");
     }
 
@@ -49,19 +48,6 @@ class OpenAIInterfaceTest {
         logger.info(response.usage().toString());
         assertThat(openAIInterface.extractStringResponse(response))
                 .isEqualTo("This is a test!");
-    }
-
-    @Test
-    void accessDallE() {
-        ImageRequest imageRequest = openAIInterface.createImageRequest(
-                """
-                        Portrait photography during the golden hour,
-                        using the soft, warm light to highlight the subject.
-                        """, 1, "512x512");
-        System.out.println(imageRequest);
-        ImageResponse response = openAIInterface.getImageResponse(imageRequest);
-        assertThat(response.data().size()).isEqualTo(1);
-        FileUtils.writeImageToFile(response.data().get(0).b64_json());
     }
 
 }
